crates/core/src/commands/snapshots/rustic_core__commands__forget__tests__keep-last15.snap
---
source: crates/core/src/commands/forget.rs
expression: result
---
[
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "last",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "last",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "last",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "last",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "last",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "last",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "last",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "last",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "last",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "last",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "last",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "last",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "last",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "last",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "last",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
]
